# wikipedia-rag-system

./: .env.example  LICENSE  README.md  data_loader.py  pyproject.toml  rag_system.py  requirements.txt  test_rag.py
